--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,31 @@
    --background: #004643;
    --headline: #fffffe;
    --stroke: #001e1d;
+   --button: #f9bc60;
+   --paragraph: #abd1c6;
 }
 
 * {
     margin: 0;
+}
+
+body {
+    font-family: "Noto Serif", sans-serif;
+    text-align: center;
+    background-color: var(--background);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Poppins", sans-serif;
+}
+
+h1 {
+    font-size: 60px;
 }
 
 #nav-bar {
@@ -23,7 +44,7 @@
 .nav-links {
     display: flex;
     list-style: none;
-    font-family: serif;
+    
 }
 
 .nav-links a {
@@ -34,4 +55,61 @@
 
 .nav-links a:hover {
     text-decoration: underline;
+}
+
+section {
+     padding: 70px 0;
+     min-height: 100vh;
+}
+
+#welcome-section {
+    background-color: var(--background);
+    color: var(--headline);
+    display: flex;
+    flex-direction: column;
+}
+
+#welcome-section p {
+    color: var(--button);
+    font-size: 25px;
+    margin: 25px 0;
+    font-style: italic;
+}
+
+#projects {
+    background-color: var(--paragraph);
+    color: var(--background)
+}
+
+#projects h1 {
+    border-bottom: 5px solid var(--background);
+    width: fit-content;
+    margin: auto;
+}
+
+#projects .projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px 1fr));
+    gap: 30px;
+    padding: 20px;
+    place-items: center;
+    max-width: 1200px;
+    margin: auto;
+}
+
+#projects .project-tile {
+    height: 525px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--background);
+    color: var
+}
+
+#projects .project-tile img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
