--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 :root {
-   --background: #004643;
-   --headline: #fffffe;
-   --stroke: #001e1d;
-   --button: #f9bc60;
-   --paragraph: #abd1c6;
+    --neutral: #004643;
+    --base-100: #fffffe;
+    --neutral-focus: #001e1d;
+    --primary: #f9bc60;
+    --accent: #abd1c6;
+    --secondary: #abd1c6;
 }
 
 * {
@@ -13,7 +14,7 @@
 body {
     font-family: "Noto Serif", sans-serif;
     text-align: center;
-    background-color: var(--background);
+    background-color: var(--neutral);
 }
 
 h1,
@@ -26,7 +27,7 @@ h6 {
 }
 
 h1 {
-    font-size: 60px;
+    font-size: 65px;
 }
 
 #nav-bar {
@@ -35,22 +36,22 @@ h1 {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: var(--background);
+    background-color: var(--neutral);
     padding: 20px 0;
     font-size: 20px;
-    border-bottom: 1px solid var(--stroke);
+    border-bottom: 1px solid var(--neutral-focus);
 }
 
 .nav-links {
     display: flex;
     list-style: none;
-    
+    font-family: "Noto Serif", sans-serif;
 }
 
 .nav-links a {
     text-decoration: none;
+    color: var(--base-100);
     padding: 0 10px;
-    color: var(--headline)
 }
 
 .nav-links a:hover {
@@ -58,43 +59,50 @@ h1 {
 }
 
 section {
-     padding: 70px 0;
-     min-height: 100vh;
+    min-height: 100vh;
+    padding: 70px 0;
 }
 
 #welcome-section {
-    background-color: var(--background);
-    color: var(--headline);
+    background-color: var(--neutral);
+    color: var(--base-100);
     display: flex;
     flex-direction: column;
+
+}
+
+#welcome-section h1 {
+    margin-top: 30vh;
 }
 
 #welcome-section p {
-    color: var(--button);
+    color: var(--primary);
     font-size: 25px;
     margin: 25px 0;
     font-style: italic;
 }
 
+
 #projects {
-    background-color: var(--paragraph);
-    color: var(--background)
+    background-color: var(--secondary);
+    color: var(--neutral);
 }
 
 #projects h1 {
-    border-bottom: 5px solid var(--background);
+    border-bottom: 5px solid var(--neutral);
     width: fit-content;
     margin: auto;
 }
 
 #projects .projects {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 30px;
     padding: 20px;
     place-items: center;
     max-width: 1200px;
     margin: auto;
+
 }
 
 #projects .project-tile {
@@ -104,12 +112,51 @@ section {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: var(--background);
-    color: var
+    background-color: var(--neutral);
+    color: var(--accent);
+    text-decoration: none;
+    border-radius: 5px;
+    box-shadow: 8px 8px 10px 5px rgba(100, 100, 100, 0.3);
 }
 
 #projects .project-tile img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+height: 100%;
+width: 100%;
+object-fit: cover;
+}
+
+#projects .project-tile p {
+    font-size: 25px;
+    padding: 10px;
+}
+
+#projects .project-tile span {
+    opacity: 0%;
+    padding: 0 5px;
+}
+
+#projects .project-tile:hover span {
+   opacity: 100%;
+   color: var(--primary);
+   transition: opacity 0.25s ease-in;
+}
+
+.show-all {
+    text-decoration: none;
+    width: max-content;
+    display: flex;
+    align-items: center;
+    margin: auto;
+    padding: 0px 15px;
+    background-color: var(--neutral);
+    color: var(--accent);
+    font-size: 25px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in;
+}
+
+.show-all:hover {
+    background-color: var(--neutral-focus);
+    color: var(--base-100);
 }
