--- a/styles.css
+++ b/styles.css
@@ -160,3 +160,44 @@ object-fit: cover;
     background-color: var(--neutral-focus);
     color: var(--base-100);
 }
+
+#contact {
+    background-color: var(--neutral);
+    color: var(--base-100);
+
+}
+
+#contact h1 {
+    margin-top: 300px;
+}
+
+#contact .questions {
+    color: var(--primary);
+    font-size: 25px;
+    
+    font-style: italic;
+
+}
+
+#contact .social-medias {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1000px;
+    justify-content: space-around;
+    margin: auto;
+    margin-top: 30px;
+}
+
+#contact .social-media {
+    text-decoration: none;
+    color: var(--base-100);
+    transition: transform 0.3s ease-in;
+    display: flex;
+    align-items: center;
+    margin: 20px;
+    font-size: 20px;
+}
+
+#contact .social-media:hover {
+    transform: translateY(5px);
+} 
