--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 
 * {
     margin: 0;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -30,7 +31,7 @@ h1 {
     font-size: 65px;
 }
 
-#nav-bar {
+#navbar {
     display: flex;
     justify-content: center;
     position: fixed;
@@ -201,3 +202,23 @@ object-fit: cover;
 #contact .social-media:hover {
     transform: translateY(5px);
 } 
+
+
+footer {
+
+    border-top: 5px solid var(--primary);
+    color: var(--base-100);
+    font-size: 30px;
+    padding: 35px;
+
+}
+
+@media only screen and (width < 700px) {
+    h1 {
+        font-size: 50px;
+    }
+    #projects .projects-tile {
+        height: 600px;
+        width: 100%;
+    }
+}
